@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.drnu" version="5.0.15" name="DR TV" provider-name="TermeHansen">
+<addon id="plugin.video.drnu" version="5.0.16" name="DR TV" provider-name="TermeHansen">
     <requires>
         <import addon="xbmc.python" version="2.26.0"/>
         <import addon="script.module.requests" version="2.22.0" />
@@ -26,9 +26,10 @@
             <icon>resources/icon.png</icon>
             <fanart>resources/fanart.jpg</fanart>
        </assets>
-       <news>[B]Version 5.0.15 - 2021-03-13[/B]
-- Add buggalo error submit to kodi.drnu gmail
-- fix bug for write subtitle files on libreelec, kodi 18.9
+       <news>-[B]Version 5.0.16 - 2021-03-30[/B]
+- fix bug on ok() dialog in matrix
+- fix bugs in favorit programs functionality
+- new setting to have area chooser item in root
     </news>
     </extension>
 </addon>
